# valve-detection

./: CMakeLists.txt  README.md  codecov.yml  package.xml
config/: valve_detection_params.yaml
include/valve_detection/: valve_detection.hpp
install/: local_setup.sh  setup.sh
install/valve_detection/share/valve_detection/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
launch/: valve_detection.launch.py
log/: latest_build
src/: valve_detection.cpp
